trunk/Archive/d623f8cdbef59db1e33dcb230e8adfd9-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:10:9: error: a function-definition is not allowed here before '{' token
         {
         ^
main.cpp:24:39: error: 'function' was not declared in this scope
         std::cout<<function (array [i]) <<"\n";
                                       ^
